# viracitapada

./: .gitignore  README.md  pre-commit.sh  pyproject.toml
.github/workflows/: checks.yml
src/viracitapada/: __init__.py
tests/: test_annotate.py  test_parse.py
