[project]
name = "viracitapada"
version = "0.1.0"
description = "Performs metrical analysis on ISO-15919-transliterated Sanskrit verses"
readme = "README.md"
authors = [
    { name = "bkis", email = "bkis@bkis.github.io" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

# mypy

[tool.mypy]
python_version = "3.10"
files = "src/viracitapada/**/*.py"
warn_return_any = true

# ruff

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
respect-gitignore = false
src = ["src", "tests"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
ignore = ["F722"]
select = ["E", "F", "W", "I", "UP", "SIM"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# pytest

[tool.pytest.ini_options]
testpaths = ["tests"]

# coverage

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
precision = 2
skip_empty = true

[tool.coverage.html]
title = "viracitapada - Test Coverage Report"
